# cowrieprocessor

./: .coverage  .coverage.dsheild-siem.1308116.XUhJRzwx  .cursorrules  .env.example  .gitignore  .pgpass.example  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENRICHMENT_ENHANCEMENT_SUMMARY.md  ENRICHMENT_STATUS_FIX.md  ISSUE_40_FIX.md  LONGTAIL_STORAGE_IMPLEMENTATION.md  LONGTAIL_VECTOR_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  PR_MERGE_MESSAGE.md  PR_MESSAGE.md  PR_MESSAGE_PERF_SANITIZATION.md  PR_MESSAGE_SHORT.md  README.md  SECURITY-QUICK-REFERENCE.md  VIRUSTOTAL_QUOTA_MANAGEMENT.md  VIRUSTOTAL_SUM_FIX.md  agents.md  analyze_performance.py  baseline_complete.txt  baseline_coverage.txt  bulk_mypy.txt  cleanup_migration.py  collect_postgresql_stats.py  coverage.json  coverage.xml  coverage_baseline_day2.txt  coverage_day3_final_verified.txt  coverage_tracking.md  cowrie_malware_enrichment.py  cowrie_pipeline.py  (+49 more)
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
archive/: README.md  cowrie_malware_enrichment.py  es_reports.py  process_cowrie.py  refresh_cache_and_reports.py  status_dashboard.py  submit_vtfiles.py
claudedocs/: ADR-005_Performance_Metrics.md  ADR-007-IMPLEMENTATION-SUMMARY.md  ADR-007-MIGRATION-RECOVERY.md  ADR_007_008_COMPLIANCE_ANALYSIS.md  ADR_007_008_FINAL_STATUS.md  ASN_GEO_ENRICHMENT_DESIGN_v2.1.md  ASN_GEO_ENRICHMENT_DESIGN_v2.2.md  ASN_GEO_ENRICHMENT_DESIGN_v2.md  ASN_INVENTORY_IMPLEMENTATION_SUMMARY.md  ASN_INVENTORY_TELEMETRY_DESIGN.md  ASN_INVENTORY_WORKFLOWS.md  ASN_STATISTICS_DESIGN.md  ASN_TELEMETRY_IMPLEMENTATION_SUMMARY.md  ASN_TELEMETRY_OPS_GUIDE.md  CASCADE_FACTORY_IMPLEMENTATION_SUMMARY.md  CYMRU_BATCHING_STRATEGY.md  CYMRU_BATCHING_USER_GUIDE.md  CYMRU_BATCHING_VALIDATION.md  DOCUMENTATION_UPDATES_SUMMARY.md  DSHIELD_JSON_PATH_ISSUE.md  ENRICHMENT_BACKFILL_ANALYSIS.md  ENRICHMENT_CRITICAL_FINDING.md  ENRICHMENT_INVESTIGATION_PLAN.md  ENRICHMENT_REFRESH_FIX.md  ENRICHMENT_STATUS_CHECK.md  ENRICHMENT_UNICODE_ROOT_CAUSE.md  GIT_HISTORY_CLEANUP_FIX.md  GIT_HISTORY_REWRITE_PLAN.md  INFRASTRUCTURE_QUERY_FIX_SUMMARY.md  INTEGRATION_TEST_DELIVERABLE.md  MIGRATION_DELIVERABLES_snapshot_ip_types.md  MILESTONE1_EXECUTIVE_SUMMARY.md  MILESTONE1_FEATURE_ANALYSIS_EXECUTIVE_SUMMARY.md  MILESTONE1_FEATURE_ANALYSIS_REPORT.md  MYPY_PRE_COMMIT_STATUS.md  PHASE0_BASELINE_COMPLETION_SUMMARY.md  PHASE1A_COMPLETION_SUMMARY.md  PHASE2A_MAXMIND_IMPLEMENTATION.md  POST_ENRICHMENT_QUERY_RERUN_PLAN.md  PRECOMMIT_HOOKS_TESTING_RESULTS.md  (+24 more)
config/: sensors.example.toml  sensors.toml
cowrieprocessor/: __init__.py  settings.py  status_emitter.py
data/: ReadMe.md
docs/: MYPY-REMEDIATION-SUMMARY.md  SECURITY-PRECOMMIT-SETUP.md  data_dictionary.md  mypy-remediation-progress.md  postgresql-migration-guide.md  snowshoe-github-issues.md  snowshoe-phase0-research.md  test-status-tracker.md
notes/: ADR002_ISSUES.md  AGENTS.md  BULK_LOADER_MULTILINE_JSON_INVESTIGATION.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DAY13_MIGRATIONS_SUMMARY.md  DAY14_SSH_ANALYTICS_SUMMARY.md  DAY16_REPORT_SUMMARY.md  DAY17_ANALYZE_SUMMARY.md  DAY18_COWRIE_DB_SUMMARY.md  DAY19_MULTI_MODULE_SUMMARY.md  DAY20_WEEK4_FINAL.md  DAY21_SUMMARY.md  DAY22_SUMMARY.md  DAY23_SUMMARY.md  DAY24-25_TARGETS.md  DAY24_SUMMARY.md  DAY26_SUMMARY.md  DAY27_SUMMARY.md  ENRICHMENT_OPTIMIZATION_FIX.md  HIBP_PASSWORD_ENRICHMENT_IMPLEMENTATION.md  HOTPATCH_README.md  LONGTAIL_REPORTING_FUTURE.md  MOCKING_ISSUES_ANALYSIS.md  PHASE_0A_STATUS.md  PHASE_1_DAY_1_PROGRESS.md  PHASE_1_PLAN.md  README.md  REFACTORING_RECOMMENDATIONS.md  UNICODE_CLEANUP_UTILITY.md  UNICODE_CONTROL_CHAR_SOLUTION.md  VIRUSTOTAL_ATTRIBUTE_FIX.md  VIRUSTOTAL_SERIALIZATION_FIX.md  WEEK2_SUMMARY.md  WEEK3_DAYS11-12_STRATEGIC_SUMMARY.md  WEEK3_PLAN.md  WEEK3_SUMMARY.md  WEEK4_PLAN.md  WEEK5-6_SPRINT_PLAN.md  committed-notes.md  (+27 more)
reports/: daily-2025-09-22.json  daily-2025-09-23.json
(+497 files in other folders)
